<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrudProducto"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codigo_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/txtcodigo_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_codigo"
                android:autofillHints="codigo"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/widget_edittext_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/txtproducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_producto"
                android:autofillHints="producto"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/widget_edittext_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/precio_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/txtprecio"
                android:inputType="text"
                android:autofillHints="precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_precio"
                android:maxLines="1"
                android:textColor="@android:color/widget_edittext_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fabricante_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/txtfabricante"
                android:inputType="text"
                android:autofillHints="Fabricante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fabricante"
                android:maxLines="1"
                android:textColor="@android:color/widget_edittext_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#323754"
            android:text="@string/btnregistrar_producto"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonConsultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#323754"
            android:text="@string/btnconsultar_producto" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#323754"
            android:text="@string/btnupdate_producto" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#323754"
            android:text="@string/btnelimina_producto" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/pantalla_principal"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>




</RelativeLayout>